# word-wrangler-gemini-live

./: .gitignore  .upstream-tracking.json  CLAUDE.md  README.md  renovate.json
.github/: upstream-last-commit.txt
.github/workflows/: ci.yml  deploy-client.yml  deploy-server.yml  deploy-wordbook.yml  monitor-upstream.yml  watch-upstream.yml
client/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  eslint.config.mjs  firebase.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
client/src/__tests__/: guessPatternSync.test.ts  personalitySync.test.ts  runnerArgsBodySync.test.ts
client/src/app/: page.tsx
client/src/constants/: gameConstants.ts
client/src/contexts/: Configuration.tsx
client/src/data/: wordWranglerWords.en.ts  wordWranglerWords.ja.ts  wordWranglerWords.test.ts  wordWranglerWords.ts
client/src/hooks/: useConnectionState.ts  useFirstBotStoppedSpeaking.test.ts  useFirstBotStoppedSpeaking.ts  useGameState.test.ts  useGameState.ts  useTexts.ts  useWordDetection.ts
client/src/types/: language.ts  personality.ts  wordbook.ts
client/src/utils/: wordDetection.test.ts  wordDetection.ts
docs/: invariants.md
docs/ideas/: 2026-05-04-quality-foundation.md  2026-05-18-i18n-japanese.md  2026-05-18-wordbook-service.md
server/: .dockerignore  CLAUDE.md  Dockerfile  bot.py  env.example  pcc-deploy.toml  pyproject.toml
server/tests/: test_bot_constants.py  test_pipeline_integration.py
wordbook/: .gitignore  CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+38 files in other folders)
