[project]
name = "word-wrangler"
version = "0.1.0"
description = "Word Wrangler guessing game powered by Gemini"
requires-python = ">=3.11"
dependencies = [
    "pipecat-ai[daily,silero,google,runner]>=1.0.0",
    "pipecatcloud>=0.4.4"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff~=0.15.14",
    "ty>=0.0.38",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
